[gd_scene load_steps=25 format=2]

[ext_resource path="res://Fonts/Roboto-BlackItalic.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://Fonts/Roboto-Medium.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://Fonts/Roboto-BoldItalic.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://Sprites/Menu/Info.png" type="Texture" id=5]
[ext_resource path="res://Prefabs/tooltip/Tooltip Lored Alert.gd" type="Script" id=6]
[ext_resource path="res://Prefabs/FuelBar.tscn" type="PackedScene" id=7]
[ext_resource path="res://Sprites/Menu/Fuel Full.png" type="Texture" id=8]
[ext_resource path="res://Sprites/Menu/drain rate.png" type="Texture" id=9]
[ext_resource path="res://Fonts/Roboto-Black.ttf" type="DynamicFontData" id=10]
[ext_resource path="res://Styles/Labels/Normal.tres" type="DynamicFont" id=11]
[ext_resource path="res://Prefabs/ui/Icon.tscn" type="PackedScene" id=12]
[ext_resource path="res://Sprites/resources/carc.png" type="Texture" id=13]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 1, 1, 1, 0.03 )
border_color = Color( 1, 1, 1, 0.65 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 1, 1, 1, 0.0509804 )
border_color = Color( 1, 1, 1, 0.65 )
expand_margin_left = 10.0
expand_margin_right = 10.0
expand_margin_top = 10.0
expand_margin_bottom = 10.0

[sub_resource type="DynamicFont" id=3]
size = 17
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 2 )

[sub_resource type="StyleBoxFlat" id=8]
bg_color = Color( 1, 1, 1, 0.03 )
border_color = Color( 1, 1, 1, 0.65 )
expand_margin_left = 10.0
expand_margin_right = 10.0
expand_margin_top = 10.0
expand_margin_bottom = 10.0

[sub_resource type="DynamicFont" id=16]
size = 12
font_data = ExtResource( 4 )

[sub_resource type="StyleBoxFlat" id=13]
draw_center = false

[sub_resource type="DynamicFont" id=15]
size = 14
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 10 )

[sub_resource type="StyleBoxFlat" id=10]
draw_center = false

[sub_resource type="DynamicFont" id=11]
size = 12
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=12]
size = 14
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 10 )

[sub_resource type="StyleBoxFlat" id=17]
draw_center = false

[sub_resource type="DynamicFont" id=18]
size = 14
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 10 )

[node name="LORED Alert" type="MarginContainer"]
margin_right = 56.0
margin_bottom = 85.0
rect_min_size = Vector2( 50, 0 )
size_flags_horizontal = 0
size_flags_vertical = 0
custom_constants/margin_right = 2
custom_constants/margin_top = 2
custom_constants/margin_left = 2
custom_constants/margin_bottom = 2
script = ExtResource( 6 )

[node name="bg" type="Panel" parent="."]
margin_left = 2.0
margin_top = 2.0
margin_right = 54.0
margin_bottom = 83.0
custom_styles/panel = SubResource( 1 )

[node name="m" type="MarginContainer" parent="."]
margin_left = 2.0
margin_top = 2.0
margin_right = 54.0
margin_bottom = 83.0
custom_constants/margin_right = 10
custom_constants/margin_top = 10
custom_constants/margin_left = 10
custom_constants/margin_bottom = 10

[node name="v" type="VBoxContainer" parent="m"]
margin_left = 10.0
margin_top = 10.0
margin_right = 42.0
margin_bottom = 71.0
custom_constants/separation = 10

[node name="v" type="VBoxContainer" parent="m/v"]
margin_right = 32.0
margin_bottom = 41.0
custom_constants/separation = 20

[node name="top" type="MarginContainer" parent="m/v/v"]
margin_right = 32.0
margin_bottom = 21.0

[node name="bg" type="Panel" parent="m/v/v/top"]
margin_right = 32.0
margin_bottom = 21.0
custom_styles/panel = SubResource( 2 )

[node name="v" type="VBoxContainer" parent="m/v/v/top"]
margin_right = 32.0
margin_bottom = 21.0
custom_constants/separation = 0

[node name="h" type="HBoxContainer" parent="m/v/v/top/v"]
margin_left = 9.0
margin_right = 23.0
margin_bottom = 21.0
size_flags_horizontal = 4
custom_constants/separation = 8
alignment = 1

[node name="icon" parent="m/v/v/top/v/h" instance=ExtResource( 12 )]
unique_name_in_owner = true
margin_bottom = 21.0

[node name="top text" type="Label" parent="m/v/v/top/v/h"]
unique_name_in_owner = true
margin_left = 8.0
margin_right = 14.0
margin_bottom = 21.0
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 3 )
text = "t"
valign = 1

[node name="sub" type="MarginContainer" parent="m/v/v"]
unique_name_in_owner = true
margin_top = 41.0
margin_right = 32.0
margin_bottom = 41.0
custom_constants/margin_right = 0
custom_constants/margin_top = 0
custom_constants/margin_left = 0
custom_constants/margin_bottom = 0

[node name="bg" type="Panel" parent="m/v/v/sub"]
margin_right = 32.0
custom_styles/panel = SubResource( 8 )

[node name="sub_LOW_FUEL" type="HBoxContainer" parent="m/v/v/sub"]
unique_name_in_owner = true
visible = false
margin_right = 32.0
margin_bottom = 24.0
custom_constants/separation = 20
alignment = 1

[node name="Fuel Progress" parent="m/v/v/sub/sub_LOW_FUEL" instance=ExtResource( 7 )]
unique_name_in_owner = true
margin_left = 25.0
margin_right = 35.0

[node name="sub_ASLEEP" type="HBoxContainer" parent="m/v/v/sub"]
unique_name_in_owner = true
visible = false
margin_right = 140.0
margin_bottom = 33.0
custom_constants/separation = 20
alignment = 1

[node name="production" type="Label" parent="m/v/v/sub/sub_ASLEEP"]
unique_name_in_owner = true
margin_right = 140.0
margin_bottom = 33.0
rect_min_size = Vector2( 140, 0 )
mouse_filter = 1
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 16 )
text = "You put this LORED to sleep 30+ seconds ago."
align = 1
autowrap = true

[node name="sub_REQUIRED_RESOURCE_NOT_EXPORTING" type="HBoxContainer" parent="m/v/v/sub"]
unique_name_in_owner = true
visible = false
margin_right = 32.0
margin_bottom = 33.0
custom_constants/separation = 20
alignment = 1

[node name="production" type="Label" parent="m/v/v/sub/sub_REQUIRED_RESOURCE_NOT_EXPORTING"]
margin_right = 193.0
margin_bottom = 33.0
mouse_filter = 1
size_flags_horizontal = 3
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 16 )
text = "This required resource is locked and cannot be used by any LORED."
align = 1
autowrap = true

[node name="bot" type="MarginContainer" parent="m/v"]
margin_top = 51.0
margin_right = 32.0
margin_bottom = 61.0
custom_constants/margin_right = 0
custom_constants/margin_top = 10
custom_constants/margin_left = 0
custom_constants/margin_bottom = 0

[node name="LOW_FUEL" type="VBoxContainer" parent="m/v/bot"]
unique_name_in_owner = true
visible = false
margin_top = 10.0
margin_right = 136.0
margin_bottom = 213.0
custom_constants/separation = 8

[node name="info" type="Label" parent="m/v/bot/LOW_FUEL"]
margin_right = 136.0
margin_bottom = 87.0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 11 )
text = "Insufficient fuel in storage for normal jobs. Awaiting resources to be able to perform the Refuel job."
valign = 1
autowrap = true

[node name="v" type="VBoxContainer" parent="m/v/bot/LOW_FUEL"]
margin_top = 95.0
margin_right = 136.0
margin_bottom = 203.0
custom_constants/separation = 0

[node name="h" type="HBoxContainer" parent="m/v/bot/LOW_FUEL/v"]
margin_right = 136.0
margin_bottom = 36.0
custom_constants/separation = 8
alignment = 1

[node name="icon" type="Panel" parent="m/v/bot/LOW_FUEL/v/h"]
margin_right = 18.0
margin_bottom = 36.0
rect_min_size = Vector2( 18, 36 )
size_flags_horizontal = 0
size_flags_vertical = 4
custom_styles/panel = SubResource( 13 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="m/v/bot/LOW_FUEL/v/h/icon"]
position = Vector2( 9, 18 )
texture = ExtResource( 5 )

[node name="shadow" type="Sprite" parent="m/v/bot/LOW_FUEL/v/h/icon/Sprite"]
self_modulate = Color( 0, 0, 0, 1 )
show_behind_parent = true
position = Vector2( 2, 2 )
texture = ExtResource( 5 )

[node name="type" type="HBoxContainer" parent="m/v/bot/LOW_FUEL/v/h"]
margin_left = 26.0
margin_right = 136.0
margin_bottom = 36.0

[node name="text" type="Label" parent="m/v/bot/LOW_FUEL/v/h/type"]
margin_top = 10.0
margin_right = 78.0
margin_bottom = 25.0
size_flags_horizontal = 4
custom_fonts/font = ExtResource( 11 )
text = "Fuel Resource:"
valign = 1

[node name="fuelResource" type="Label" parent="m/v/bot/LOW_FUEL/v/h/type"]
unique_name_in_owner = true
margin_left = 82.0
margin_top = 9.0
margin_right = 110.0
margin_bottom = 26.0
mouse_filter = 1
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 15 )
text = "Coal"
align = 1
valign = 1

[node name="h2" type="HBoxContainer" parent="m/v/bot/LOW_FUEL/v"]
margin_top = 36.0
margin_right = 136.0
margin_bottom = 72.0
custom_constants/separation = 8
alignment = 1

[node name="icon" type="Panel" parent="m/v/bot/LOW_FUEL/v/h2"]
margin_left = 14.0
margin_right = 32.0
margin_bottom = 36.0
rect_min_size = Vector2( 18, 36 )
size_flags_horizontal = 0
size_flags_vertical = 4
custom_styles/panel = SubResource( 10 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="m/v/bot/LOW_FUEL/v/h2/icon"]
position = Vector2( 9, 18 )
texture = ExtResource( 9 )

[node name="shadow" type="Sprite" parent="m/v/bot/LOW_FUEL/v/h2/icon/Sprite"]
self_modulate = Color( 0, 0, 0, 1 )
show_behind_parent = true
position = Vector2( 2, 2 )
texture = ExtResource( 9 )

[node name="text" type="Label" parent="m/v/bot/LOW_FUEL/v/h2"]
margin_left = 40.0
margin_top = 10.0
margin_right = 94.0
margin_bottom = 25.0
size_flags_horizontal = 4
custom_fonts/font = SubResource( 11 )
text = "Fuel Cost:"
valign = 1

[node name="fuelCost" type="Label" parent="m/v/bot/LOW_FUEL/v/h2"]
unique_name_in_owner = true
margin_left = 102.0
margin_top = 9.0
margin_right = 122.0
margin_bottom = 26.0
mouse_filter = 1
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 12 )
text = "1/s"
align = 1
valign = 1

[node name="h3" type="HBoxContainer" parent="m/v/bot/LOW_FUEL/v"]
margin_top = 72.0
margin_right = 136.0
margin_bottom = 108.0
custom_constants/separation = 8
alignment = 1

[node name="icon" type="Panel" parent="m/v/bot/LOW_FUEL/v/h3"]
margin_left = 8.0
margin_right = 26.0
margin_bottom = 36.0
rect_min_size = Vector2( 18, 36 )
size_flags_horizontal = 0
size_flags_vertical = 4
custom_styles/panel = SubResource( 10 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="m/v/bot/LOW_FUEL/v/h3/icon"]
position = Vector2( 9, 18 )
texture = ExtResource( 8 )

[node name="shadow" type="Sprite" parent="m/v/bot/LOW_FUEL/v/h3/icon/Sprite"]
self_modulate = Color( 0, 0, 0, 1 )
show_behind_parent = true
position = Vector2( 2, 2 )
texture = ExtResource( 8 )

[node name="text" type="Label" parent="m/v/bot/LOW_FUEL/v/h3"]
margin_left = 34.0
margin_top = 10.0
margin_right = 98.0
margin_bottom = 25.0
size_flags_horizontal = 4
custom_fonts/font = SubResource( 11 )
text = "Fuel Stored:"
valign = 1

[node name="fuel" type="Label" parent="m/v/bot/LOW_FUEL/v/h3"]
unique_name_in_owner = true
margin_left = 106.0
margin_top = 9.0
margin_right = 127.0
margin_bottom = 26.0
mouse_filter = 1
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 12 )
text = "1/1"
align = 1
valign = 1

[node name="ASLEEP" type="VBoxContainer" parent="m/v/bot"]
unique_name_in_owner = true
visible = false
margin_top = 10.0
margin_right = 32.0
margin_bottom = 241.0
custom_constants/separation = 8

[node name="info" type="Label" parent="m/v/bot/ASLEEP"]
visible = false
margin_right = 271.0
margin_bottom = 15.0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 11 )
text = "If you don't care, then neither do I!"
align = 1
valign = 1
autowrap = true

[node name="v" type="VBoxContainer" parent="m/v/bot/ASLEEP"]
margin_right = 60.0
margin_bottom = 231.0
custom_constants/separation = 0

[node name="h" type="HBoxContainer" parent="m/v/bot/ASLEEP/v"]
margin_right = 60.0
margin_bottom = 231.0
custom_constants/separation = 8

[node name="icon" type="Panel" parent="m/v/bot/ASLEEP/v/h"]
margin_top = 97.0
margin_right = 18.0
margin_bottom = 133.0
rect_min_size = Vector2( 18, 36 )
size_flags_horizontal = 0
size_flags_vertical = 4
custom_styles/panel = SubResource( 13 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="m/v/bot/ASLEEP/v/h/icon"]
position = Vector2( 9, 18 )
texture = ExtResource( 5 )

[node name="shadow" type="Sprite" parent="m/v/bot/ASLEEP/v/h/icon/Sprite"]
self_modulate = Color( 0, 0, 0, 1 )
show_behind_parent = true
position = Vector2( 2, 2 )
texture = ExtResource( 5 )

[node name="text" type="Label" parent="m/v/bot/ASLEEP/v/h"]
margin_left = 26.0
margin_right = 60.0
margin_bottom = 231.0
size_flags_horizontal = 7
custom_fonts/font = ExtResource( 11 )
text = "You can disable this and other types of alerts in the options menu."
valign = 1
autowrap = true

[node name="REQUIRED_RESOURCE_NOT_EXPORTING" type="HBoxContainer" parent="m/v/bot"]
unique_name_in_owner = true
visible = false
margin_left = -18.0
margin_top = 10.0
margin_right = 50.0
margin_bottom = 42.0
size_flags_horizontal = 4
custom_constants/separation = 8
alignment = 1

[node name="icon" type="Panel" parent="m/v/bot/REQUIRED_RESOURCE_NOT_EXPORTING"]
margin_right = 32.0
margin_bottom = 32.0
rect_min_size = Vector2( 32, 32 )
size_flags_horizontal = 0
size_flags_vertical = 4
custom_styles/panel = SubResource( 17 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="iconRequiredResource" type="Sprite" parent="m/v/bot/REQUIRED_RESOURCE_NOT_EXPORTING/icon"]
unique_name_in_owner = true
position = Vector2( 16, 16 )
texture = ExtResource( 13 )

[node name="shadow" type="Sprite" parent="m/v/bot/REQUIRED_RESOURCE_NOT_EXPORTING/icon/iconRequiredResource"]
self_modulate = Color( 0, 0, 0, 1 )
show_behind_parent = true
position = Vector2( 2, 2 )
texture = ExtResource( 13 )

[node name="textRequiredResource" type="Label" parent="m/v/bot/REQUIRED_RESOURCE_NOT_EXPORTING"]
unique_name_in_owner = true
margin_left = 40.0
margin_top = 7.0
margin_right = 68.0
margin_bottom = 24.0
mouse_filter = 1
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 18 )
text = "Coal"
valign = 1
